:lipstick: Fix content margin on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
 .content {
-  margin: 1em auto;
+  margin: 1em;
   max-width: 690px;
 }
